# conclave

./: .gitignore  README.md  cardinals_page.html  current_cardinals.csv  get_cardinal_data.py  papal_data.duckdb  papal_data.duckdb.wal  pyproject.toml  tmp.py
notebooks/: papal_data_pipeline.ipynb  papal_data_pipeline.py
sql/: create_popes_table.sql  update_pope_francis_details.sql
