[project]
name = "conclave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.3.2",
    "marimo>=0.13.0",
    "pandas>=2.2.3",
    "sqlglot>=26.15.0",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "notebook>=7.4.0",
]
